--- a/resources/views/html/themes/tuxedo.css
+++ b/resources/views/html/themes/tuxedo.css
@@ -414,7 +414,7 @@ p.sub {
 
 .purchase_tax, .purchase_shipping {
     font-weight: normal;
-    color: #87898b;
+    color: #484c52;
 }
 
 .purchase_total--label, .purchase_tax--label, .purchase_shipping--label {
