--- a/resources/views/html/themes/tuxedo.css
+++ b/resources/views/html/themes/tuxedo.css
@@ -250,6 +250,37 @@ p.sub {
     padding-bottom: 0;
 }
 
+/* Alerts */
+
+.alert {
+    margin: 0 0 21px;
+}
+
+.alert-content {
+    background-color: #EDEFF2;
+    padding: 16px;
+}
+
+.alert-item {
+    padding: 0;
+}
+
+.alert.alert-info {
+    background-color: #3097D1;
+}
+
+.alert.alert-warning {
+    background-color: #bf9d31;
+}
+
+.alert.alert-success {
+    background-color: #2ab27b;
+}
+
+.alert.alert-success {
+    background-color: #bf5329;
+}
+
 /* Promotions */
 
 .promotion {
